plugins/kotlin/idea/tests/testData/checker/recovery/returnInFileAnnotation.fir.kt
@file:<error descr="[UNRESOLVED_REFERENCE]">suppress</error>(return <error descr="[UNRESOLVED_REFERENCE]">a</error>)
